<resources>
    <string name="app_name">Notes</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="term_use">
        By registering, you confirm that you accept app\'s Terms of Use.</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account ?</string>
    <string name="create_one">Create One</string>
    <string name="have_account">Have an account ?</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
