<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/create_account"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvCreateAccount"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_user"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etName"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_mail"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etEmail"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_margin="20dp"
        android:text="@string/term_use" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_below="@+id/tvTerms"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/register"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btRegister"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="100dp"
        android:text="@string/have_account" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btRegister"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/tvHaveAccount"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"/>

    <ProgressBar
        android:id="@+id/pbRegister"
        style="?android:attr/progressBarStyle"
        android:indeterminateDrawable="@drawable/custom_progress_bar_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminateTint="@color/colorAccent"
    />


</RelativeLayout>