<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvAppName"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_mail"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etUserName"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_below="@+id/etUserPassword"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/sign_in"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btSignIn"
        android:layout_centerInParent="true"
        android:text="@string/no_account" />

    <TextView
        android:id="@+id/tvCreateAccountLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNoAccount"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_one"
        android:textColor="@color/colorPrimary"/>

    <ProgressBar
        android:id="@+id/pbLogin"
        style="?android:attr/progressBarStyle"
        android:indeterminateDrawable="@drawable/custom_progress_bar_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>